WexGit/Wex_DX/force-app/main/default/objects/Wes_Accounts_Receivable__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Wes Accounts Receivables</relationshipLabel>
    <relationshipName>Wes_Accounts_Receivables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>