WexGit/Wex_DX/force-app/main/default/objects/Wes_Accounts_Receivable__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Account Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>