WexGit/Wex_DX/force-app/main/default/objects/Wes_Accounts_Receivable__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>