WexGit/Wex_DX/force-app/main/default/objects/Wes_Accounts_Receivable__c/fields/isOverdue__c.field-meta.xml
<CustomField>
    <fullName>isOverdue__c</fullName>
    <formula>Payment_Behaviour__c &lt;&gt;  $Label.Pymt_behaviour</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isOverdue</label>
    <type>Checkbox</type>
</CustomField>