WexGit/Wex_DX/force-app/main/default/objects/Wes_Accounts_Receivable__c/fields/Payment_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Payment_Behaviour__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Behaviour</label>
    <length>100</length>
    <type>Text</type>
</CustomField>