WexGit/Wex_DX/force-app/main/default/objects/Wes_Accounts_Receivable__c/fields/Ultimate_Parent_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_External_Id__c</fullName>
    <formula>Account__r.Ultimate_Parent_External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Parent External Id</label>
    <type>Text</type>
</CustomField>